<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Kolibree. All rights reserved
  ~
  ~ Copying this file via any medium without the prior written consent of Kolibree is strictly
  ~ prohibited
  ~
  ~ Proprietary and confidential
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.kolibree.bttester.R"/>

        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="com.kolibree.bttester.ota.mvi.OtaViewModel"/>

    </data>

    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:keepScreenOn="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <Button
                android:id="@+id/scan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Scan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{() -> viewModel.scanClicked()}"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888888"
                android:text="Toothbrush model"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!viewModel.otaInProgress}"
                app:items="@{viewModel.toothbrushModels}"
                app:itemBinding="@{viewModel.toothbrushModelsBinding}"
                app:itemDropDownLayout="@{R.layout.item_ota_toothbrush_model}"
                android:selectedItemPosition="@={viewModel.toothbrushModelPosition}"
                android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mac_address">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.otaInProgress}"
                    android:text="@={viewModel.macAddress}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_otas">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.otaInProgress}"
                    android:inputType="number"
                    android:text="@={viewModel.numberOfIterationsString}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_ota"
                android:enabled="@{viewModel.startButtonEnabled}"
                android:onClick="@{() -> viewModel.startClicked()}"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/ota_iterations(viewModel.currentIteration, viewModel.numberOfIterations)}"
                android:visibility="@{viewModel.iterationsVisible ? View.VISIBLE : View.INVISIBLE}"
                tools:text="Iteration: 1/10"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.statusMessage}"
                tools:text="Progress: 66%"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/ota_errors(viewModel.numberOfErrors)}"
                android:visibility="@{viewModel.errorsVisible ? View.VISIBLE : View.INVISIBLE}"
                android:textColor="@color/red"
                android:textStyle="bold"
                tools:text="Number of failed OTAs: 0"/>

    </LinearLayout>
</layout>

